<resources>
    <string name="app_name">ConfiguracaoPersonagem</string>
    <string name="titulo_criar_personagem">Crie seu peronsagem</string>
    <string name="label_nome">Nome do personagem</string>
    <string name="label_sexo">Sexo</string>
    <string name="label_masculino">Masculino</string>
    <string name="label_feminino">Feminino</string>
    <string name="label_classes">Classes</string>
    <string name="label_forca">Força</string>
    <string name="button_criar">Criar</string>
    <string name="label_rodape">Desenvolvido por FIAP Games</string>
    <string name="mago">Mago</string>
    <string name="guerreiro">Guerreiro</string>
    <string name="arqueiro">Arqueiro</string>
    <string name="bardo">Bardo</string>
    <string name="anao">Anão</string>
    <string name="elfo">Elfo</string>
    <string name="licantropo">Licantropo</string>
    <string name="undead">Undead</string>
    <string name="lblracas">Raças</string>


</resources>
