<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.canaveze.celso.configuracaopersonagem.PersonagemActivity">

    <RelativeLayout
        android:id="@+id/cabeçalho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/titulo_criar_personagem"
            android:textSize="24sp"
            android:textStyle="bold"></TextView>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rodape"
        android:layout_below="@+id/cabeçalho">

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_nome" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_sexo" />

            <RadioGroup
                android:id="@+id/rgSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMssculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/label_masculino" />

                <RadioButton
                    android:id="@+id/rbFeminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/label_feminino" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_classes" />

            <Spinner
                android:id="@+id/spClasses"
                android:entries="@array/classes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblracas"/>
            <Spinner
                android:id="@+id/spRacas"
                android:entries="@array/racas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <ImageView
                android:src="@drawable/elfo"
                android:layout_gravity="center"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:id="@+id/ivRacas"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_forca" />

            <TextView
                android:id="@+id/tvForca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0"/>
            <SeekBar
                android:id="@+id/sbForca"
                android:max="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="HP"/>
            <TextView
                android:id="@+id/tvHP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0"
                />
            <SeekBar
                android:id="@+id/sbHP"
                android:max="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Carisma" />
            <TextView
                android:id="@+id/tvCarisma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0"/>
            <SeekBar
                android:id="@+id/sbCarisma"
                android:max="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Inteligencia"/>
            <TextView
                android:id="@+id/tvInt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0"/>
            <SeekBar
                android:id="@+id/sbInt"
                android:max="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_marginTop="32dp"
                android:id="@+id/btCriar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_criar"/>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_rodape"></TextView>
    </RelativeLayout>


</RelativeLayout>
